[chore] : 로컬 프로파일 활성화 설정 추가 및 Flyway MySQL 의존성 추가

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: delivery-server
+  profiles:
+    active: local
   datasource:
     url: ${DB_URL:jdbc:mysql://localhost:3306/delivery?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
     username: ${DB_USERNAME:delivery}
