--- a/server/src/test/resources/application-test.yml
+++ b/server/src/test/resources/application-test.yml
@@ -11,3 +11,9 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
+
+app:
+  jwt:
+    secret: test-jwt-secret-key-for-integration-tests-123456
+    access-token-expiration-seconds: 3600
+    refresh-token-expiration-seconds: 1209600
