--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -24,3 +24,8 @@ app:
     secret: ${JWT_SECRET}
     access-token-expiration-seconds: ${JWT_ACCESS_TOKEN_EXPIRATION_SECONDS:3600}
     refresh-token-expiration-seconds: ${JWT_REFRESH_TOKEN_EXPIRATION_SECONDS:1209600}
+  bootstrap:
+    sys-admin:
+      email: ${APP_BOOTSTRAP_SYS_ADMIN_EMAIL:}
+      password: ${APP_BOOTSTRAP_SYS_ADMIN_PASSWORD:}
+      display-name: ${APP_BOOTSTRAP_SYS_ADMIN_DISPLAY_NAME:시스템 관리자}
