[feat] : T-0309 무게 기반 요금 계산 서비스 구현

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -32,3 +32,6 @@ app:
   upload:
     local-dir: ${APP_UPLOAD_LOCAL_DIR:./uploads}
     max-size-bytes: ${APP_UPLOAD_MAX_SIZE_BYTES:5242880}
+  waste:
+    pricing:
+      per-kg-krw: ${APP_WASTE_PRICING_PER_KG_KRW:1000}
