--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,7 +22,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "axios": "^1.7.7",
-    "@react-native-async-storage/async-storage": "^1.23.1"
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "expo-image-picker": "~16.0.3"
   },
   "devDependencies": {
     "@types/react": "~18.3.12",
