--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,19 +11,20 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "expo": "~52.0.0",
+    "expo-image-picker": "~16.0.3",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "axios": "^1.7.7",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "expo-image-picker": "~16.0.3"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@types/react": "~18.3.12",
