--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -40,3 +40,10 @@ app:
       billing-auth-base-url: ${APP_PAYMENT_REGISTRATION_BILLING_AUTH_BASE_URL:https://api.tosspayments.com/v1/billing/authorizations/issue}
       success-url: ${APP_PAYMENT_REGISTRATION_SUCCESS_URL:http://localhost:8080/user/payment-methods/registration/success}
       fail-url: ${APP_PAYMENT_REGISTRATION_FAIL_URL:http://localhost:8080/user/payment-methods/registration/fail}
+  address-search:
+    base-url: ${APP_ADDRESS_SEARCH_BASE_URL:https://api.example.com/address/search}
+    api-key: ${APP_ADDRESS_SEARCH_API_KEY:}
+    connect-timeout-millis: ${APP_ADDRESS_SEARCH_CONNECT_TIMEOUT_MILLIS:2000}
+    read-timeout-millis: ${APP_ADDRESS_SEARCH_READ_TIMEOUT_MILLIS:3000}
+    default-limit: ${APP_ADDRESS_SEARCH_DEFAULT_LIMIT:10}
+    max-limit: ${APP_ADDRESS_SEARCH_MAX_LIMIT:30}
