[feat] : T-0115 Juso 도로명 주소 검색 스펙 정합화

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -41,7 +41,7 @@ app:
       success-url: ${APP_PAYMENT_REGISTRATION_SUCCESS_URL:http://localhost:8080/user/payment-methods/registration/success}
       fail-url: ${APP_PAYMENT_REGISTRATION_FAIL_URL:http://localhost:8080/user/payment-methods/registration/fail}
   address-search:
-    base-url: ${APP_ADDRESS_SEARCH_BASE_URL:https://api.example.com/address/search}
+    base-url: ${APP_ADDRESS_SEARCH_BASE_URL:https://business.juso.go.kr/addrlink/addrLinkApi.do}
     api-key: ${APP_ADDRESS_SEARCH_API_KEY:}
     connect-timeout-millis: ${APP_ADDRESS_SEARCH_CONNECT_TIMEOUT_MILLIS:2000}
     read-timeout-millis: ${APP_ADDRESS_SEARCH_READ_TIMEOUT_MILLIS:3000}
