[feat] : T-0119 미인증 사용자 보호 API 차단 및 응답 플래그 추가

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -53,5 +53,6 @@ app:
     store-id: ${APP_PHONE_VERIFICATION_STORE_ID:}
     channel-key: ${APP_PHONE_VERIFICATION_CHANNEL_KEY:}
     api-secret: ${APP_PHONE_VERIFICATION_API_SECRET:}
+    enforcement-enabled: ${APP_PHONE_VERIFICATION_ENFORCEMENT_ENABLED:true}
     connect-timeout-millis: ${APP_PHONE_VERIFICATION_CONNECT_TIMEOUT_MILLIS:2000}
     read-timeout-millis: ${APP_PHONE_VERIFICATION_READ_TIMEOUT_MILLIS:3000}
